fix add to cart bag alignment

--- a/site/components/common/UserNav/UserNav.module.css
+++ b/site/components/common/UserNav/UserNav.module.css
@@ -1,9 +1,9 @@
 .root {
-  @apply relative flex items-center;
+  @apply relative ;
 }
 
 .list {
-  @apply flex flex-row items-center justify-items-end h-full;
+  @apply h-full;
 }
 
 .item {
